[package]
name = "ds-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
redis-protocol = "6.0.0"
bytes = "1.10.1"
anyhow = "1.0.99"
bincode = "2.0.1"
serde = { version = "1", features = ["derive"] }
clap = {version = "4.5.47", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio-util = { version="0.7.16", features=["codec"] }